[project]
name = "pytorch-unet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "matplotlib==3.6.2",
    "numpy==1.23.5",
    "pillow==11.3.0",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
    "tqdm==4.66.3",
    "wandb==0.23.1",
]

[[tool.uv.index]]
name = "pytorch-aliyun"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu126"
explicit = true  # 设置为 true，表示只有显式指定了该源的包才会从这里下
format = 'flat' # 即该源是一种包含 wheel 文件和源分发包的扁平列表的本地目录或 HTML 页面

[tool.uv.sources]
torch = { index = "pytorch-aliyun" }
torchvision = { index = "pytorch-aliyun" }
torchaudio = { index = "pytorch-aliyun" }